crates/rustre-arch-x86/tests/snapshots/snapshots_llil__bitness_32.snap
---
source: crates/rustre-arch-x86/tests/snapshots_llil.rs
assertion_line: 288
expression: "render_corpus(\"bitness corpus lifted in 32-bit mode\", 32, corpus)"
---
# bitness corpus lifted in 32-bit mode

== push 0x55 (bits=32) ==
-- push 55h [6a 55]
   0x1000: push.4 0x55.4

== push eax (bits=32) ==
-- push eax [50]
   0x1000: push.4 low(rax.8, 4)

== pop ebx (bits=32) ==
-- pop ebx [5b]
   0x1000: ebx.4 = pop

== mov eax, ecx (bits=32) ==
-- mov eax,ecx [89 c8]
   0x1000: rax.8 = zx(low(rcx.8, 4), 4->8)

== add eax, ebx (bits=32) ==
-- add eax,ebx [01 d8]
   0x1000: tmp0.4 = (low(rax.8, 4) + low(rbx.8, 4)).4
   0x1000: flag(cf) = (tmp0.4 <u low(rax.8, 4))
   0x1000: flag(of) = (((low(rax.8, 4) <s 0x0.4) == (low(rbx.8, 4) <s 0x0.4)) & ((tmp0.4 <s 0x0.4) != (low(rax.8, 4) <s 0x0.4))).1
   0x1000: flag(af) = (((low(rax.8, 4) & 0xf.4).4 + (low(rbx.8, 4) & 0xf.4).4).4 >u 0xf.4)
   0x1000: flag(sf) = (tmp0.4 <s 0x0.4)
   0x1000: flag(zf) = (tmp0.4 == 0x0.4)
   0x1000: flag(pf) = parity(tmp0.4).1
   0x1000: rax.8 = zx(tmp0.4, 4->8)

== call +0x100 (bits=32) ==
-- call 00001105h [e8 00 01 00 00]
   0x1000: call 0x1105.4

== ret (bits=32) ==
-- ret [c3]
   0x1000: ret

== mov eax, [ebx] (bits=32) ==
-- mov eax,[ebx] [8b 03]
   0x1000: rax.8 = zx([ebx.4].4, 4->8)

== lea eax, [ebx+ecx*4+8] (bits=32) ==
-- lea eax,[ebx+ecx*4+8] [8d 44 8b 08]
   0x1000: rax.8 = zx(((ebx.4 + (ecx.4 * 0x4.4).4).4 + 0x8.4).4, 4->8)

== xor eax, eax (bits=32) ==
-- xor eax,eax [31 c0]
   0x1000: rax.8 = zx(0x0.4, 4->8)
   0x1000: flag(cf) = 0x0.1
   0x1000: flag(of) = 0x0.1
   0x1000: flag(sf) = 0x0.1
   0x1000: flag(zf) = 0x1.1
   0x1000: flag(pf) = 0x1.1
