crates/rustre-arch-x86/tests/snapshots/snapshots_llil__logic_shifts_64.snap
---
source: crates/rustre-arch-x86/tests/snapshots_llil.rs
assertion_line: 124
expression: "render_corpus(\"logic + shifts (64-bit)\", 64, corpus)"
---
# logic + shifts (64-bit)

== and rax, rbx (bits=64) ==
-- and rax,rbx [48 21 d8]
   0x1000: tmp0.8 = (rax.8 & rbx.8).8
   0x1000: flag(cf) = 0x0.1
   0x1000: flag(of) = 0x0.1
   0x1000: flag(af) = 0x0.1
   0x1000: flag(sf) = (tmp0.8 <s 0x0.8)
   0x1000: flag(zf) = (tmp0.8 == 0x0.8)
   0x1000: flag(pf) = parity(tmp0.8).1
   0x1000: rax.8 = tmp0.8

== or eax, 0xff (bits=64) ==
-- or eax,0FFh [0d ff 00 00 00]
   0x1000: tmp0.4 = (low(rax.8, 4) | 0xff.4).4
   0x1000: flag(cf) = 0x0.1
   0x1000: flag(of) = 0x0.1
   0x1000: flag(af) = 0x0.1
   0x1000: flag(sf) = (tmp0.4 <s 0x0.4)
   0x1000: flag(zf) = (tmp0.4 == 0x0.4)
   0x1000: flag(pf) = parity(tmp0.4).1
   0x1000: rax.8 = zx(tmp0.4, 4->8)

== xor eax, eax (zero idiom) (bits=64) ==
-- xor eax,eax [31 c0]
   0x1000: rax.8 = zx(0x0.4, 4->8)
   0x1000: flag(cf) = 0x0.1
   0x1000: flag(of) = 0x0.1
   0x1000: flag(sf) = 0x0.1
   0x1000: flag(zf) = 0x1.1
   0x1000: flag(pf) = 0x1.1

== xor rax, rbx (bits=64) ==
-- xor rax,rbx [48 31 d8]
   0x1000: tmp0.8 = (rax.8 ^ rbx.8).8
   0x1000: flag(cf) = 0x0.1
   0x1000: flag(of) = 0x0.1
   0x1000: flag(af) = 0x0.1
   0x1000: flag(sf) = (tmp0.8 <s 0x0.8)
   0x1000: flag(zf) = (tmp0.8 == 0x0.8)
   0x1000: flag(pf) = parity(tmp0.8).1
   0x1000: rax.8 = tmp0.8

== not rax (bits=64) ==
-- not rax [48 f7 d0]
   0x1000: rax.8 = (~rax.8).8

== shl rax, 4 (bits=64) ==
-- shl rax,4 [48 c1 e0 04]
   0x1000: tmp0.8 = (rax.8 << 0x4.1).8
   0x1000: flag(cf) = shl_cf(rax.8, 0x4.1).1
   0x1000: flag(sf) = (tmp0.8 <s 0x0.8)
   0x1000: flag(zf) = (tmp0.8 == 0x0.8)
   0x1000: flag(pf) = parity(tmp0.8).1
   0x1000: rax.8 = tmp0.8

== shl rax, cl (bits=64) ==
-- shl rax,cl [48 d3 e0]
   0x1000: tmp0.1 = (cl.1 & 0x3f.1).1
   0x1000: tmp1.8 = (rax.8 << tmp0.1).8
   0x1000: flag(cf) = ((tmp0.1 == 0x0.1) ? flag(cf) : shl_cf(rax.8, tmp0.1).1).1
   0x1000: flag(sf) = ((tmp0.1 == 0x0.1) ? flag(sf) : (tmp1.8 <s 0x0.8)).1
   0x1000: flag(zf) = ((tmp0.1 == 0x0.1) ? flag(zf) : (tmp1.8 == 0x0.8)).1
   0x1000: flag(pf) = ((tmp0.1 == 0x0.1) ? flag(pf) : parity(tmp1.8).1).1
   0x1000: rax.8 = tmp1.8

== shr rax, 1 (bits=64) ==
-- shr rax,1 [48 d1 e8]
   0x1000: tmp0.8 = (rax.8 >> 0x1.1).8
   0x1000: flag(cf) = shr_cf(rax.8, 0x1.1).1
   0x1000: flag(sf) = (tmp0.8 <s 0x0.8)
   0x1000: flag(zf) = (tmp0.8 == 0x0.8)
   0x1000: flag(pf) = parity(tmp0.8).1
   0x1000: rax.8 = tmp0.8

== sar eax, 2 (bits=64) ==
-- sar eax,2 [c1 f8 02]
   0x1000: tmp0.4 = (low(rax.8, 4) >>a 0x2.1).4
   0x1000: flag(cf) = sar_cf(low(rax.8, 4), 0x2.1).1
   0x1000: flag(sf) = (tmp0.4 <s 0x0.4)
   0x1000: flag(zf) = (tmp0.4 == 0x0.4)
   0x1000: flag(pf) = parity(tmp0.4).1
   0x1000: rax.8 = zx(tmp0.4, 4->8)

== rol eax, 3 (bits=64) ==
-- rol eax,3 [c1 c0 03]
   0x1000: tmp0.4 = (low(rax.8, 4) rol 0x3.1).4
   0x1000: flag(cf) = rol_cf(low(rax.8, 4), 0x3.1).1
   0x1000: rax.8 = zx(tmp0.4, 4->8)

== ror rax, 7 (bits=64) ==
-- ror rax,7 [48 c1 c8 07]
   0x1000: tmp0.8 = (rax.8 ror 0x7.1).8
   0x1000: flag(cf) = ror_cf(rax.8, 0x7.1).1
   0x1000: rax.8 = tmp0.8
